--- a/css/main.css
+++ b/css/main.css
@@ -90,4 +90,41 @@ h3 {
 .city {
   text-transform: capitalize;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 0 20px;
+  border: 1px solid #888;
+  width: 300px;
+  height: 350px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
