--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,13 @@
   .main-header {
     text-align: left;
     padding-top: 50px;
+    padding-left: 45px;
+  }
+}
+
+@media (min-width: 992px) {
+  .main-header {
+    padding-left: 75px;
   }
 }
 
@@ -87,7 +94,8 @@ h3 {
   text-transform: capitalize;
 }
 
-.city {
+.city,
+.modal-address {
   text-transform: capitalize;
 }
 
@@ -108,9 +116,10 @@ h3 {
   background-color: #fefefe;
   margin: 5% auto;
   padding: 0 20px;
-  border: 1px solid #888;
-  width: 300px;
-  height: 350px;
+  border: 2px outset #f4f4f4;
+  width: 350px;
+  height: 400px;
+  border-radius: 5px;
 }
 
 /* The Close Button */
@@ -126,5 +135,46 @@ h3 {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal-content {
+  text-align: center;
+}
+
+.modal-content .userImg {
+  margin: 20px;
+  width: 100px;
+  height: 100px;
+}
+
+.modal-content .userInfo li {
+  text-align: center;
+  margin-bottom: 10px;
+  font-family: 'Merriweather', serif;
+}
+
+.modal-content .userName {
+  font-size: 1.2em;
+}
+
+.modal-content p {
+  margin-bottom: 10px;
+  font-family: 'Playfair Display', serif;
+}
+
+.modal-address {
+  font-size: .8em;
+}
+
+#modal-hr {
+  margin: 20px;
+  border: 0;
+  height: 1px;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0)));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.modal-dob {
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=main.css.map */
